<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_zodiac"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="bastian.ciberzodiac.view.ZodiacActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Tu nombre">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RadioGroup
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/dateRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="¿En que fecha naciste?"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:text="@string/Piscis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton" />

        <RadioButton
            android:text="@string/Aries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/Tauro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/Géminis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/Cáncer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/Leo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/Virgo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/Libra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/Escorpio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/Sagitario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/Capricornio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/Acuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <fragment
            android:id="@+id/resultBtn"
            android:name="bastian.ciberzodiac.view.resultBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:layout="@layout/fragment_result_btn" />

    </RadioGroup>
    </ScrollView>

</LinearLayout>
